<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.student.myquiz.ZgadnijKtoTo"
    android:background="#74b9ff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Zgadnij kto to?"
            android:layout_gravity="center"
            android:padding="20dp"/>

        <ImageView
            android:id="@+id/zagadka_1"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:srcCompat="@drawable/zagadka1"
            android:layout_gravity="center"/>

        <RadioGroup
            android:id="@+id/radio_group1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/radio1_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/waz_good"/>
            <RadioButton
                android:id="@+id/radio1_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/waz_bad"/>
        </RadioGroup>

        <ImageView
            android:id="@+id/zagadka_2"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:srcCompat="@drawable/zagadka2"
            android:layout_gravity="center"/>

        <RadioGroup
            android:id="@+id/radio_group2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/radio2_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/osiol_good"/>
            <RadioButton
                android:id="@+id/radio2_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/osiol_bad"/>
        </RadioGroup>

        <ImageView
            android:id="@+id/zagadka_3"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:srcCompat="@drawable/zagadka3"
            android:layout_gravity="center"/>

        <RadioGroup
            android:id="@+id/radio_group3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/radio3_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/men_good"/>
            <RadioButton
                android:id="@+id/radio3_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/men_bad"/>
        </RadioGroup>

        <ImageView
            android:id="@+id/zagadka_4"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:srcCompat="@drawable/zagadka4"
            android:layout_gravity="center"/>

        <RadioGroup
            android:id="@+id/radio_group4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/radio4_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wilk_bad"/>
            <RadioButton
                android:id="@+id/radio4_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wilk_good"/>
        </RadioGroup>

        <ImageView
            android:id="@+id/zagadka_5"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:srcCompat="@drawable/zagadka5"
            android:layout_gravity="center"/>

        <RadioGroup
            android:id="@+id/radio_group5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/radio5_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/swinka_good"/>
            <RadioButton
                android:id="@+id/radio5_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/swinka_bad"/>
        </RadioGroup>

        <Button
            android:id="@+id/check_button"
            android:text="Check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </LinearLayout>


</ScrollView>
